# src/core/dto/game.dto.ts
@@ -1,0 +1,16 @@
+export interface GameDto {
+    uuid: string;
+    name: string;
+    description: string;
+}
+
+export interface GameCreateDto {
+    name: string;
+    description: string;
+}
+
+export interface GameUpdateDto {
+    uuid: string;
+    name: string;
+    description: string;
+}
